# py-five-minute-journal

./: .env.example  .gitignore  LICENSE  OneMinute.py  PyFiveMinuteJournal.py  README.md  config.py  journal.py  open.py  pyproject.toml  requirements.txt
journals/: header-template.md  question-template.md
locales/: journal.[locale].yml  journal.en.yml  journal.es.yml  journal.fr.yml  journal.sv.yml
providers/: BaseQuoteProvider.py  BaseStorageProvider.py  MarkdownStorageProvider.py  ZenQuoteProvider.py
src/fiveminutejournal/: __init__.py  __main__.py  console.py  journal.py  storage.py  utils.py
src/fiveminutejournal/locales/: journal.it.yml  journal.pt.yml  journal.sv.yml
src/fiveminutejournal/plugins/: default.py
